[package]
name = "pint"
version = "0.1.0"
edition = "2018"
authors = ["Philipp Rados"]

description = "A Piet Interpreter with a builting PNG-decoder"
repository = "https://github.com/PhilippRados/pint"
keywords = ["piet", "interpreter", "decoder", "cli"]

license = "MIT"

[lib]
name = "pint"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
inflate = { version = "0.4.5" }

[dev-dependencies]
tempfile = "3"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
